--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
 </head>
 <body>
-    <img src="https://raw.githubusercontent.com/MariyaSha/SimpleGreetingApp/main/logo.png">
+    <img src="https://github.com/taingo001/excel-project/blob/main/Images/group.png">
     <br>
     <form action="greet" method="post">
         {% for message in get_flashed_messages() %}
