--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../CSS/main_styles.css">
   <title>Going Data Way</title>
-  <link rel="shortcut icon" href="../Images/group.png">
+  <link rel="shortcut icon" href="Images/group.png">
   <style>
     img{width: 80px;
        height: 80px;}
