--- a/css/main.css
+++ b/css/main.css
@@ -1,41 +1,108 @@
-body {
-    text-align: center;
-    background-color: SlateGrey;
+body{
+  background: ;
 }
-p {
-    color: white;
-    font-family: Shanti;
-    font-size: 1.2em;
-    display: inline-block;
-    margin:  20px;
+/* styles for header */
+
+/* styles for main */
+
+/* Styles for elements */
+
+h1{
+  text-align: center;
+  color: rgb(10, 99, 71);
 }
-img {
-    margin: 60px 0 30px 0;
-    width: 250px;
+
+.container{
+  width: 80%;
+  margin:auto;
+  overflow: hidden;
 }
-input {
-  width: 300px;
-  margin: 20px 20px;
-  height: 50px;
+
+.dropdown {
+  float: left;
+  overflow: hidden;  
+}
+
+.dropdown .dropbtn {
+  font-size: 1.5em;  
   border: none;
-  border-radius: 10px;
-  font-family: Shanti;
-  font-size: 1.3em;
+  outline: none;
+  padding: 8px 10px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+  color: white;
+  text-decoration: none;
+}
+
+.dropdown:hover .dropbtn {
+  background-color: #0A6347;
+  color: white;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #0A6347;
+  min-width: 80px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,1);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  float: none;
+  color: white;
+  padding: 8px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown-content a:hover {
+  background-color: #e8491d;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+
+header{
+  color: #000000;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 16px;
   text-align: center;
 }
 
-input:focus {
-    outline: none;
-    border: solid 5px #00FFCE;
+nav{
+  text-align: center;
 }
 
-#greet {
-    background-color: PaleVioletRed;
-    border:  none;
-    width:  200px;
-    color: white;
+a:hover{
+  font-style: italic;
 }
 
-#greet:hover {
-    background-color: MediumVioletRed;
+article{
+  align: center;
+  width: 96%;
+  background-color:;
+  border-style: solid;
+  border-width: 50px;
+  border-color: ;
+  min-height: 500px;
+}
+
+footer{
+  color: ;
+  text-align: center ;
+  background-color:;
+}
+
+
+.button_1{
+  height: 28px;
+  background: #e8491d;
+  border: 0;
+  padding-left: 20px;
+  padding-right: 20px;
+  color: white;
 }
