--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../CSS/main_styles.css">
+  <link rel="stylesheet" href="../CSS/main.css">
   <title>Going Data Way</title>
   <link rel="shortcut icon" href="Images/group.png">
   <style>
