--- a/templates/index.html
+++ b/templates/index.html
@@ -53,7 +53,7 @@
 <main>
   <body>
     <ul>
-  <li> <a href="./home.html"><img src="../Images/group.png" alt="Icon" ></a></li>
+  <li> <a href="./home.html"><img src="Images/group.png" alt="Icon" ></a></li>
   <li> <a href="home.html">Home</a></li>
           <div class="dropdown">
             <button class="dropbtn">About Us</button>
