--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../CSS/main.css">
   <title>Going Data Way</title>
-  <link rel="shortcut icon" href="Images/group.png">
+  <link rel="shortcut icon" href="group.png">
   <style>
     img{width: 80px;
        height: 80px;}
@@ -53,7 +53,7 @@
 <main>
   <body>
     <ul>
-  <li> <a href="./home.html"><img src="Images/group.png" alt="Icon" ></a></li>
+  <li> <a href="./home.html"><img src="group.png" alt="Icon" ></a></li>
   <li> <a href="home.html">Home</a></li>
           <div class="dropdown">
             <button class="dropbtn">About Us</button>
