--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../CSS/main.css">
   <title>Going Data Way</title>
-  <link rel="shortcut icon" href="group.png">
+  <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/512/6983/6983272.png">
   <style>
     img{width: 80px;
        height: 80px;}
@@ -53,20 +53,10 @@
 <main>
   <body>
     <ul>
-  <li> <a href="./home.html"><img src="group.png" alt="Icon" ></a></li>
+  <li> <a href="./home.html"><img src="https://cdn-icons-png.flaticon.com/512/6983/6983272.png" alt="Icon" ></a></li>
   <li> <a href="home.html">Home</a></li>
-          <div class="dropdown">
-            <button class="dropbtn">About Us</button>
-             <div class="dropdown-content">
-               <li style="display:inline"><a href="../about.html" >Our Group</a></li>
-             </div>
-          </div>
-          <div class="dropdown">
-            <button class="dropbtn">Help</button>
-             <div class="dropdown-content">
-               <li style="display:inline"><a href="../help.html" >Help</a></li>
-             </div>
-          </div>
+  <li> <a href="about.html">About Us</a></li>
+  <li> <a href="help.html">Help</a></li>
         </ul>
     <h1>Welcome to Going Data Way!</h1>
 
