--- a/templates/index.html
+++ b/templates/index.html
@@ -53,10 +53,10 @@
 <main>
   <body>
     <ul>
-  <li> <a href="./home.html"><img src="https://cdn-icons-png.flaticon.com/512/6982/6982581.png" alt="Icon" ></a></li>
-  <li> <a href="home.html">Home</a></li>
-  <li> <a href="about.html">About Us</a></li>
-  <li> <a href="help.html">Help</a></li>
+  <li> <a href="templates/index.html"><img src="https://cdn-icons-png.flaticon.com/512/6982/6982581.png" alt="Icon" ></a></li>
+  <li> <a href="templates/index.html">Home</a></li>
+  <li> <a href="templates/about.html">About Us</a></li>
+  <li> <a href="templates/help.html">Help</a></li>
         </ul>
     <h1>Welcome to Going Data Way!</h1>
 
