--- a/templates/about.html
+++ b/templates/about.html
@@ -41,20 +41,10 @@
 <main>
   <body>
     <ul>
-  <li> <a href="./home.html"><img src="../Images/group.png" alt="Icon" ></a></li>
-  <li> <a href="home.html">Home</a></li>
-          <div class="dropdown">
-            <button class="dropbtn">About Us</button>
-             <div class="dropdown-content">
-               <li style="display:inline"><a href="./about.html" >Our Group</a></li>
-             </div>
-          </div>
-          <div class="dropdown">
-            <button class="dropbtn">Help</button>
-             <div class="dropdown-content">
-               <li style="display:inline"><a href="./help.html" >Help</a></li>
-             </div>
-          </div>
+ <li> <a href="https://going-data-way.herokuapp.com/"><img src="https://cdn-icons-png.flaticon.com/512/6982/6982581.png" alt="Icon" ></a></li>
+  <li> <a href="https://going-data-way.herokuapp.com/">Home</a></li>
+  <li> <a href="https://going-data-way.herokuapp.com/about">About Us</a></li>
+  <li> <a href="https://going-data-way.herokuapp.com/help">Help</a></li>
     </ul>
     <h1>About Us</h1>
 
