--- a/templates/index.html
+++ b/templates/index.html
@@ -63,7 +63,7 @@
    
     
     <h2>Download Our Template</h2>
-    <a href="https://github.com/taingo001/hello/blob/main/template.csv" download="CSV Template">
+    <a href="template.csv" download="CSV Template">
       <button type="button">Download</button>
     </a>
 
