--- a/templates/index.html
+++ b/templates/index.html
@@ -63,7 +63,7 @@
    
     
     <h2>Download Our Template</h2>
-    <a href="inner/template.txt" download="CSV Template">
+    <a download href="inner/template.txt">
       <button type="button">Download</button>
     </a>
 
