--- a/templates/index.html
+++ b/templates/index.html
@@ -63,7 +63,7 @@
    
     
     <h2>Download Our Template</h2>
-    <a download href="inner/template.txt">
+    <a href="/inner/template.txt" download>
       <button type="button">Download</button>
     </a>
 
