--- a/templates/help.html
+++ b/templates/help.html
@@ -34,6 +34,10 @@
           color:;
           text-align: center;
             }
+      h1{
+         text-align: center;
+         color: rgb(10, 99, 71);
+          }
     </style>
 
 </head>
