--- a/templates/index.html
+++ b/templates/index.html
@@ -63,7 +63,7 @@
    
     
     <h2>Download Our Template</h2>
-    <a href="../test-file.csv" download="CSV Template">
+    <a href="https://going-data-way.herokuapp.com/test-file.csv" download="CSV Template">
       <button type="button">Download</button>
     </a>
 
