--- a/templates/index.html
+++ b/templates/index.html
@@ -63,7 +63,7 @@
    
     
     <h2>Download Our Template</h2>
-    <a href="{{ url_for('download')}}">
+    <a href="csv_template.csv">
       <button type="button">Download</button>
     </a>
     
