--- a/templates/index.html
+++ b/templates/index.html
@@ -63,7 +63,7 @@
    
     
     <h2>Download Our Template</h2>
-    <a href="https://going-data-way.herokuapp.com/download">
+    <a href="csv_template.csv" download>
       <button type="button">Download</button>
     </a>
     
