--- a/templates/help.html
+++ b/templates/help.html
@@ -46,10 +46,10 @@
   <body>
       <ul>
         <li> <a href="https://going-data-way.herokuapp.com/"><img src="https://cdn-icons-png.flaticon.com/512/6982/6982581.png" alt="Icon" ></a></li>
-  <li> <a href="https://going-data-way.herokuapp.com/">Home</a></li>
-  <li> <a href="https://going-data-way.herokuapp.com/data">Data</a></li
-  <li> <a href="https://going-data-way.herokuapp.com/about">About Us</a></li>
-  <li> <a href="https://going-data-way.herokuapp.com/help">Help</a></li>
+        <li> <a href="https://going-data-way.herokuapp.com/">Home</a></li>
+        <li> <a href="https://going-data-way.herokuapp.com/data">Data</a></li>
+        <li> <a href="https://going-data-way.herokuapp.com/about">About Us</a></li>
+        <li> <a href="https://going-data-way.herokuapp.com/help">Help</a></li>
         </ul>
 <h1>Frequently Asked Questions</h1>
         <p>Question 1</p>
