--- a/templates/about.html
+++ b/templates/about.html
@@ -57,6 +57,8 @@
         <p>Will Keegan</p>
         <p>Graham Schomp</p>
         <p>Tai Ngo</p>
+      <p>Tai Ngo</p>
+    
 
 
  <div class="footer">
