--- a/templates/application.html
+++ b/templates/application.html
@@ -63,8 +63,8 @@
 
    
     
-    <h2>Upload your CSV File here</h2>
-    <form method="POST" enctype="multipart/form-data" action="/">
+   <h2>Upload your CSV File here</h2>
+    <form action="{{url_for('upload') }}" method="post" enctype="multipart/form-data">
       <label for="myfile">Choose a file to upload.</label>
       <input type="file" id="myfile" name="myfile" accept=".csv"><br><br>
       <input type="submit" value="Submit">
