--- a/templates/application.html
+++ b/templates/application.html
@@ -62,13 +62,19 @@
     <h1>Welcome to Going Data Way!</h1>
 
    
-    
    <h2>Upload your CSV File here</h2>
-    <form action="{{url_for('upload') }}" method="post" enctype="multipart/form-data">
+    <form method="POST" enctype="multipart/form-data" action="/">
       <label for="myfile">Choose a file to upload.</label>
       <input type="file" id="myfile" name="myfile" accept=".csv"><br><br>
       <input type="submit" value="Submit">
     </form>
+    
+   """<h2>Upload your CSV File here</h2>
+    <form action="{{url_for('upload') }}" method="post" enctype="multipart/form-data">
+      <label for="myfile">Choose a file to upload.</label>
+      <input type="file" id="myfile" name="myfile" accept=".csv"><br><br>
+      <input type="submit" value="Submit">
+    </form>"""
    
        
     <div class="footer">
