--- a/templates/application.html
+++ b/templates/application.html
@@ -69,6 +69,8 @@
       <input type="submit" value="Submit">
     </form>
     
+    {{data | safe}}
+    
    """<h2>Upload your CSV File here</h2>
     <form action="{{url_for('upload') }}" method="post" enctype="multipart/form-data">
       <label for="myfile">Choose a file to upload.</label>
