--- a/templates/index.html
+++ b/templates/index.html
@@ -59,7 +59,7 @@
   <li> <a href="https://going-data-way.herokuapp.com/about">About Us</a></li>
   <li> <a href="https://going-data-way.herokuapp.com/help">Help</a></li>
         </ul>
-    <h1>Welcome to Going Data Way!</h1>
+    <h1>Welcome to Going Data Way</h1>
 
        
     <h2>Download Our Template</h2>
